# CoACD

./: .gitignore  .gitmodules  CMakeLists.txt  main.cpp  setup.py
dev/: build_wheels.sh  docker_build_wheels.sh  upload_to_conda.sh
python/: pycoacd.cpp
python/pycoacd-stubs/: __init__.pyi
src/: process.cpp  process.h
